--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,9 +5,18 @@
     </div>
     <span class="ml-3 font-medium text-gray-900"><%= display_name(post.user) %></span>
   </div>
-  
-  <p class="text-lg text-gray-900"><%= post.content %></p>
-  
+
+  <p class="text-lg text-gray-900">
+    <%= post.content %></p>
+
+    <% if post.images.attached? %>
+      <div class="images">
+        <% post.images.each do |image| %>
+          <%= image_tag image, class: "post-image-large" %>
+        <% end %>
+      </div>
+    <% end %>
+
   <div class="mt-4 flex justify-between items-center">
     <span class="text-sm text-gray-500">
       <%= l post.created_at, format: :long %>
