--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,6 +19,15 @@
             </span>
           </div>
           <p class="text-lg text-gray-900"><%= post.content %></p>
+
+          <% if post.images.attached? %>
+            <div class="mt-4 grid grid-cols-2 gap-4">
+              <% post.images.each do |image| %>
+                <%= image_tag image, class: "w-full h-48 object-cover rounded-lg" %>
+              <% end %>
+            </div>
+          <% end %>
+
           <div class="mt-4 flex justify-between items-center">
             <span class="text-sm text-gray-500">
               <%= l post.created_at, format: :long %>
