ログイン機能、投稿機能、プロフィール

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,11 @@
       </div>
       <div class="flex items-center space-x-4">
         <% if user_signed_in? %>
-          <%= link_to profile_path(current_user.profile), class: "flex items-center space-x-2 hover:opacity-75" do %>
-            <div class="w-8 h-8 rounded-full bg-gray-200 flex items-center justify-center">
-              <span class="text-gray-600 text-sm"><%= current_user.name.first.upcase %></span>
-            </div>
+          <div class="w-8 h-8 rounded-full bg-gray-200 flex items-center justify-center">
+            <span class="text-gray-600 text-sm"><%= current_user.name.first.upcase %></span>
+          </div>
+
+          <%= link_to profile_path(current_user.profile.id), class: "btn btn-link" do %>
             <span class="text-gray-700">
               <%= current_user.profile.nickname.presence || current_user.name %>
             </span>
