--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,7 +24,7 @@
               <%= l post.created_at, format: :long %>
             </span>
             <div class="flex space-x-4">
-              <% if current_user.admin? || post.user == current_user %>
+              <% if current_user && (current_user.admin? || post.user == current_user) %>
                 <%= link_to "削除", post_path(post),
                     data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" },
                     class: "text-pink-500 hover:text-pink-600" %>
