画像投稿機能追加

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,8 +16,8 @@
   </div>
 
   <div>
-    <%= form.label :images, "画像", class: "block text-sm font-medium text-gray-700" %>
-    <%= form.file_field :images, multiple: true, accept: 'image/png',
+    <%= form.label :image, "画像", class: "block text-sm font-medium text-gray-700" %>
+    <%= form.file_field :image, accept: 'image/png',
         class: "mt-1 block w-full text-sm text-gray-500
                 file:mr-4 file:py-2 file:px-4
                 file:rounded-full file:border-0
