--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,11 +20,9 @@
           </div>
           <p class="text-lg text-gray-900"><%= post.content %></p>
 
-          <% if post.images.attached? %>
+          <% if post.image.attached? %>
             <div class="mt-4 grid grid-cols-2 gap-4">
-              <% post.images.each do |image| %>
-                <%= image_tag image, class: "w-full h-48 object-cover rounded-lg" %>
-              <% end %>
+              <%= image_tag post.image, class: "w-full h-48 object-cover rounded-lg" %>
             </div>
           <% end %>
 
