--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -15,11 +15,9 @@
   <p class="text-lg text-gray-900">
     <%= post.content %></p>
 
-    <% if post.images.attached? %>
-      <div class="images">
-        <% post.images.each do |image| %>
-          <%= image_tag image, class: "post-image-large" %>
-        <% end %>
+    <% if post.image.attached? %>
+      <div class="image">
+        <%= image_tag post.image, class: "post-image-large" %>
       </div>
     <% end %>
 
