--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -31,6 +31,13 @@
             <span class="ml-3 font-medium text-gray-900"><%= post.user.profile.nickname %></span>
           </div>
           <p class="text-lg text-gray-900"><%= post.content %></p>
+
+          <% if post.image.attached? %>
+            <div class="mt-4 grid grid-cols-2 gap-4">
+              <%= image_tag post.image, class: "w-full h-48 object-cover rounded-lg" %>
+            </div>
+          <% end %>
+
           <div class="mt-4 flex justify-between items-center">
             <span class="text-sm text-gray-500">
               <%= l post.created_at, format: :long %>
