--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,10 +7,12 @@
       <div class="flex items-center space-x-4">
       <% if user_signed_in? %>
         <%= link_to profile_path(current_user.profile.id), class: "btn btn-link" do %>
-          <div class="w-8 h-8 rounded-full bg-gray-200 flex items-center justify-center">
-            <span class="text-gray-600 text-sm"><%= current_user.name.first.upcase %></span>
-          </div>
-        <% end %>
+          <%= render partial: 'shared/user_avatar', locals: {
+            user: current_user,
+            size: '8',
+            text_size: 'text-sm'
+          } %>
+      <% end %>
 
           <%= link_to profile_path(current_user.profile.id), class: "btn btn-link" do %>
             <span class="text-gray-700">
