見た目の変更

--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -5,7 +5,7 @@
       class: "w-full rounded-lg border-gray-300 shadow-sm focus:border-pink-500 focus:ring-pink-500"
       %>
       <%= f.submit "検索",
-      class: "bg-pink-500 text-white px-3 py-1.5 text-sm rounded-lg hover:bg-pink-600 transition-colors duration-200 min-w-[60px]"
+      class: "bg-rose-300 text-white px-3 py-1.5 text-sm rounded-lg hover:bg-rose-400 transition-colors duration-200 min-w-[60px]"
       %>
     </div>
   <% end %>
