--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-  <div class="bg-white shadow rounded-lg p-6 mb-8">
+  <div class="bg-fuchsia-50 shadow rounded-lg p-6 mb-8">
     <div class="flex items-center justify-between">
       <div class="flex items-center space-x-4">
       <%= render partial: 'shared/user_avatar', locals: {
@@ -13,13 +13,13 @@
         </div>
       </div>
       <% if @profile.user == current_user %>
-        <%= link_to "プロフィールを編集", edit_profile_path(@profile), class: "bg-pink-500 text-white px-4 py-2 rounded-lg hover:bg-pink-600" %>
+        <%= link_to "プロフィールを編集", edit_profile_path(@profile), class: "bg-rose-300 text-white px-4 py-2 rounded-lg hover:bg-rose-400" %>
       <% end %>
     </div>
   </div>
 
-  <div class="bg-white shadow rounded-lg p-6">
-    <h2 class="text-2xl font-bold text-gray-900 mb-6">投稿一覧</h2>
+  <div class="bg-rose-50 shadow rounded-lg p-6">
+    <h2 class="text-2xl font-bold text-gray-500 mb-6">投稿一覧</h2>
     <div class="space-y-6">
       <% @profile.user.posts.each do |post| %>
         <%= link_to post_path(post), class: "block" do %>
@@ -30,9 +30,9 @@
                   size: '8',
                   text_size: 'text-sm'
                 } %>
-              <span class="ml-3 font-medium text-gray-900"><%= post.user.profile.nickname %></span>
+              <span class="ml-3 font-medium text-gray-500"><%= post.user.profile.nickname %></span>
             </div>
-            <p class="text-lg text-gray-900"><%= post.content %></p>
+            <p class="text-lg text-gray-500"><%= post.content %></p>
 
             <% if post.image.attached? %>
               <div class="mt-4 grid grid-cols-2 gap-4">
@@ -48,7 +48,7 @@
                 <div class="relative z-10">
                   <%= link_to "削除", post_path(post),
                     data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" },
-                    class: "text-pink-500 hover:text-pink-600" %>
+                    class: "text-pink-400 hover:text-pink-500" %>
                 </div>
               <% end %>
             </div>
