--- a/app/views/shared/_user_avatar.html.erb
+++ b/app/views/shared/_user_avatar.html.erb
@@ -1,4 +1,4 @@
-<div class="w-<%= size %> h-<%= size %> rounded-full overflow-hidden" style="width: 3rem; height: 3rem;">
+<div class="rounded-full overflow-hidden" style="width: 3rem; height: 3rem;">
   <% if user.profile.avatar.attached? %>
     <%= image_tag user.profile.avatar, class: "w-#{size} h-#{size} rounded-full object-cover" %>
   <% else %>
