--- a/app/views/shared/_user_avatar.html.erb
+++ b/app/views/shared/_user_avatar.html.erb
@@ -1,6 +1,6 @@
 <div class="rounded-full overflow-hidden" style="width: 3rem; height: 3rem;">
   <% if user.profile.avatar.attached? %>
-    <%= image_tag user.profile.avatar, class: "w-#{size} h-#{size} rounded-full object-cover" %>
+    <%= image_tag user.profile.avatar, class: "w-full h-full rounded-full object-cover" %>
   <% else %>
     <div class="w-full h-full rounded-full bg-gray-200 flex items-center justify-center">
       <span class="text-gray-600 <%= text_size %>">
