--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
           </div>
         <% else %>
           <%= link_to "ログイン", new_user_session_path,
-              class: "bg-pink-400 hover:bg-pink-500 text-white px-4 py-2 rounded-lg transition duration-150 ease-in-out" %>
+              class: "bg-blue-300 hover:bg-blue-400 text-gray-500 px-4 py-2 rounded-lg transition duration-150 ease-in-out" %>
           <%= link_to "お問い合わせ", "https://docs.google.com/forms/d/e/1FAIpQLScYi56m5QkM5PbOvbumktTCnpb0wWRgVsJyoFdVcDFm0BQ-Vg/viewform",
               target: "_blank",
               class: "bg-purple-300 hover:bg-purple-400 text-gray-500 px-4 py-2 rounded-lg transition duration-150 ease-in-out" %>
