--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <div class="min-h-screen bg-pink-100 flex flex-col items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-  <div class="max-w-md w-full bg-white rounded-lg shadow-lg p-8">
-    <h2 class="text-center text-3xl font-bold tracking-tight text-gray-900 mb-8">パスワードをお忘れですか？</h2>
+  <div class="max-w-md w-full bg-rose-50 rounded-lg shadow-lg p-8">
+    <h2 class="text-center text-3xl font-bold tracking-tight text-gray-500 mb-8">パスワードをお忘れですか？</h2>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "space-y-6" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
@@ -13,7 +13,7 @@
 
       <div class="actions">
         <%= f.submit "パスワード再設定メールを送信", 
-            class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-pink-400 hover:bg-pink-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500" %>
+            class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-rose-300 hover:bg-rose-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500" %>
       </div>
     <% end %>
 
