--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="min-h-screen bg-pink-100 flex flex-col items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-  <div class="max-w-md w-full bg-white rounded-lg shadow-lg p-8">
-    <h2 class="text-center text-3xl font-bold tracking-tight text-gray-900 mb-8">Sign up</h2>
+  <div class="max-w-md w-full bg-rose-50 rounded-lg shadow-lg p-8">
+    <h2 class="text-center text-3xl font-bold tracking-tight text-gray-500 mb-8">Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-6" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
