--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,12 +8,13 @@
       <div class="field">
         <%= f.label :email, class: "block text-sm font-medium text-gray-700" %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email",
+            placeholder: "メールアドレスを入力",
             class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-300 focus:ring focus:ring-pink-200 focus:ring-opacity-50" %>
       </div>
 
       <div class="actions">
         <%= f.submit "パスワード再設定メールを送信", 
-            class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-rose-300 hover:bg-rose-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500" %>
+            class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-rose-400 hover:bg-rose-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500" %>
       </div>
     <% end %>
 
