--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,43 @@
 <div class="min-h-screen bg-pink-100 flex flex-col items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full bg-rose-50 rounded-lg shadow-lg p-8">
-    <h2 class="text-center text-3xl font-bold tracking-tight text-gray-500 mb-8">Sign up</h2>
+    <h2 class="text-center text-3xl font-bold tracking-tight text-gray-500 mb-8">ユーザー登録</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-6" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
         <%= f.label :name, class: "block text-sm font-medium text-gray-700" %><br />
-        <%= f.text_field :name, autofocus: true, 
+        <%= f.text_field :name, autofocus: true,
+            placeholder: "名前を入力",
             class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-300 focus:ring focus:ring-pink-200 focus:ring-opacity-50" %>
       </div>
 
       <div class="field">
         <%= f.label :email, class: "block text-sm font-medium text-gray-700" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", 
+        <%= f.email_field :email, autofocus: true, autocomplete: "email",
+            placeholder: "メールアドレスを入力",
             class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-300 focus:ring focus:ring-pink-200 focus:ring-opacity-50" %>
       </div>
 
       <div class="field">
         <%= f.label :password, class: "block text-sm font-medium text-gray-700" %>
         <% if @minimum_password_length %>
-        <em class="text-xs text-gray-500">(<%= @minimum_password_length %> characters minimum)</em>
+        <em class="text-xs text-gray-500">(<%= @minimum_password_length %> 文字以上)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "new-password",
+            placeholder: "パスワードを入力",
             class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-300 focus:ring focus:ring-pink-200 focus:ring-opacity-50" %>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation, class: "block text-sm font-medium text-gray-700" %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password",
+            placeholder: "パスワードを再入力",
             class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-pink-300 focus:ring focus:ring-pink-200 focus:ring-opacity-50" %>
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-pink-400 hover:bg-pink-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500" %>
+        <%= f.submit "登録する", class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-pink-400 hover:bg-pink-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500" %>
       </div>
     <% end %>
 
