--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_with(model: post, class: "space-y-6") do |form| %>
   <% if post.errors.any? %>
     <div class="bg-red-50 border-l-4 border-red-400 p-4 rounded">
-      <h2 class="text-red-700"><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+      <h2 class="text-red-700">
+        <%= "#{post.errors.count}件のエラーがあります:" %>
+      </h2>
       <ul class="list-disc pl-5 mt-2">
         <% post.errors.each do |error| %>
           <li class="text-red-600"><%= error.full_message %></li>
